Intentando poner el modelo entrenado en el proyecto

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,6 +27,11 @@
             <h2>Seleccionar Ingredientes</h2>
             <p>Selecciona ingredientes visualmente para obtener una receta.</p>
         </div>
+        <div class="option-card" onclick="window.location.href='/gpt2s'">
+            <img src="{{ url_for('static', filename='imagenes/grocery.png') }}" alt="Selección de ingredientes" />
+            <h2>GPT2</h2>
+            <p>Selecciona ingredientes visualmente para obtener una receta.</p>
+        </div>
     </div>
 
 </body>
