Activado el uso de la GPU NVIDIA con cuda en la librería torch

--- a/app/templates/gpt2.html
+++ b/app/templates/gpt2.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generador de Recetas</title>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='imagenes/favicon.ico') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <style>
         body {
             font-family: 'Arial', sans-serif;
