--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}" />
+    <link rel="icon" href="{{ url_for('static', filename='imagenes/favicon.ico') }}" type="image/x-icon" />
     <title>CocinAI</title>
 </head>
 <body>
