--- a/app/templates/gpt2.html
+++ b/app/templates/gpt2.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generador de Recetas</title>
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='imagenes/favicon.ico') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -20,16 +19,21 @@
 
         .container {
             background-color: #fff;
-            padding: 25px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
             width: 90%;
             max-width: 600px;
+            transition: transform 0.3s;
+        }
+
+        .container:hover {
+            transform: scale(1.02);
         }
 
         h1 {
             text-align: center;
-            font-size: 24px;
+            font-size: 28px;
             color: #333;
             margin-bottom: 20px;
         }
@@ -41,16 +45,20 @@
             display: block;
         }
 
-        textarea {
+        input[type="text"] {
             width: 100%;
-            height: 120px;
-            padding: 10px;
+            padding: 12px;
             font-size: 16px;
             border-radius: 6px;
             border: 1px solid #ccc;
             margin-bottom: 20px;
-            resize: vertical;
             box-sizing: border-box;
+            transition: border-color 0.3s;
+        }
+
+        input[type="text"]:focus {
+            border-color: #4CAF50;
+            outline: none;
         }
 
         button {
@@ -76,6 +84,7 @@
             border-radius: 6px;
             border: 1px solid #e0e0e0;
             color: #333;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         .recipe-output h3 {
@@ -87,7 +96,6 @@
             font-size: 16px;
             line-height: 1.6;
             white-space: pre-wrap; /* Mantener el formato del texto */
-
         }
     </style>
 </head>
